--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "mysql": "^2.18.1",
     "uuid": "^8.3.2"
